test/corpus/bound.txt
==================
bound.txt :: single backtick quote
==================
`Hello`
---
(text
	(pure)
)


==================
bound.txt :: Angle block
==================
> Hello
---
(text
	(pure)
)


==================
bound.txt :: Angle block with angle informal
==================
> Hello > what's your name?
---
(text
	(pure)
	(pure
		(informal)
	)
	(pure)
)
