test/corpus/escape.txt
==================
escape.txt :: Single escaped character (tab)
==================
\t
---
(text
	(escape_sequence))

==================
escape.txt :: Single escaped character (backslash)
==================
\\
---
(text
	(escape_sequence))

==================
escape.txt :: Text with escape in the middle (\\)
==================
It's time \\ to go
---
(text
	(pure)
	(escape_sequence)
	(pure)
)


==================
escape.txt :: Text with escaping quote
==================
`It's time \`to go\` now`
---
(text
	(pure)
	(escape_sequence)
	(pure)
	(escape_sequence)
	(pure)
)
