test/corpus/express.txt
==================
expression.txt :: Empty expression
==================
Hello, {}!
---
(text
	(pure)
	(expression
		(expression_content)
	)
	(pure)
)


==================
expression.txt :: expression with path
==================
Good morning { esther }, how are you?
---
(text
	(pure)
	(expression
		(expression_content)
	)
	(pure)
)


==================
expression.txt :: expression with subarray
==================
Good morning { esther[0] }, how are you?
---
(text
	(pure)
	(expression
		(expression_content)
	)
	(pure)
)

==================
expression.txt :: Unfinished expression
==================
Good morning { esther
---
(text
	(pure)
	(expression
		(expression_content)
		(MISSING "}")
	)
)

==================
expression.txt :: Unfinished expression with subarray
==================
Good morning { esther[0]
---
(text
	(pure)
	(expression
		(expression_content)
		(MISSING "}")
	)
)
