test/corpus/path.txt
==================
path.txt :: Single-identifier path
==================
@rubin
---
(text
	(path
		(path_content)
	)
)

==================
path.txt :: Single-identifier path relative
==================
@.name
---
(text
	(path
		(path_content)
	)
)


==================
path.txt :: Multi-identifier path
==================
@rubin.name.color
---
(text
	(path
		(path_content)
	)
)



==================
path.txt :: Multi-identifier path (relative)
==================
@.name.color
---
(text
	(path
		(path_content)
	)
)
