test/corpus/tag.txt
==================
tag.txt :: Empty start tag
==================
<>
---
(text
	(tag_start)
)


==================
tag.txt :: Empty end tag
==================
</>
---
(text
	(tag_end)
)


==================
tag.txt :: Incomplete start tag
==================
<
---
(text
	(ERROR)
)


==================
tag.txt :: Incomplete end tag
==================
</
---
(text
	(ERROR)
)


==================
tag.txt :: Start tag, single char
==================
<b>
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
			)
		)
	)
)


==================
tag.txt :: Start tag, multiple chars
==================
<wave>
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
			)
		)
	)
)



==================
tag.txt :: Start tag with param/arg (unbound)
==================
<wave osc=8>
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
			)
			(arg
				(identifier)
				(arg_value)
			)
		)
	)
)


==================
tag.txt :: Start tag with spaces between param/arg
==================
<wave osc = 8>
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
			)
			(arg
				(identifier)
				(arg_value)
			)
		)
	)
)


==================
tag.txt :: Start tag with direct arg
==================
<wave =8>
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
				(arg_value)
			)
		)
	)
)


==================
tag.txt :: Start tag with multiple ids
==================
<wave|b>
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
			)
		)
		(decor
			(arg
				(identifier)
			)
		)
	)
)


==================
tag.txt :: Start tag with args and additional tag
==================
<wave spin=8|i>
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
			)
			(arg
				(identifier)
				(arg_value)
			)
		)
		(decor
			(arg
				(identifier)
			)
		)
	)
)


==================
tag.txt :: Start tag with args and additional tag (spaced)
==================
<wave spin=8 | i>
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
			)
			(arg
				(identifier)
				(arg_value)
			)
		)
		(decor
			(arg
				(identifier)
			)
		)
	)
)


==================
tag.txt :: Start tag with string arg
==================
<va="Rubin Redding">
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
				(arg_value)
			)
		)
	)
)


==================
tag.txt :: Start tag with string arg then bold
==================
<va="Rubin Redding" | b>
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
				(arg_value)
			)
		)
		(decor
			(arg
				(identifier)
			)
		)
	)
)


==================
tag.txt :: Start tag with string arg containing escaped separator
==================
<va="Rubin | Redding" | b>
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
				(arg_value)
			)
		)
		(decor
			(arg
				(identifier)
			)
		)
	)
)


==================
tag.txt :: Start tag with expression
==================
<va={ > Rubin }>
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
				(arg_value
					(expression
						(expression_content)
					)
				)
			)
		)
	)
)


==================
tag.txt :: Tag containing path
==================
<color=@.color>@.name</>
---
(text
	(tag_start
		(decor
			(arg
				(identifier)
				(arg_value
					(path)
				)
			)
		)
	)
	(path)
	(tag_end)
)
