test/corpus/translation.txt
==================
translation.txt :: Standalone translation
==================
[en]
---
(text
	(translation_marker
		(lang)
	)
)


==================
translation.txt :: Standalone translation-locale
==================
[en-US]
---
(text
	(translation_marker
		(lang)
	)
)


==================
translation.txt :: Default then translation then text
==================
Hola [en] Hello
---
(text
	(pure)
	(translation_marker
		(lang)
	)
	(pure)
)



==================
translation.txt :: Default then two translations
==================
Hola [en] Hello [de] Bonjour
---
(text
	(pure)
	(translation_marker
		(lang)
	)
	(pure)
	(translation_marker
		(lang)
	)
	(pure)
)


==================
translation.txt :: Non-latin text
==================
[ja] こんにちは [zh] 你好 [ar] مرحبًا
---
(text
	(translation_marker
		(lang)
	)
	(pure)
	(translation_marker
		(lang)
	)
	(pure)
	(translation_marker
		(lang)
	)
	(pure)
)


==================
translation.txt :: Multi-line translations
==================
Hello
[es] Hola
[ja] こんにちは
[zh] 你好
[ar] مرحبًا
---
(text
	(pure)
	(translation_marker
		(lang)
	)
	(pure)
	(translation_marker
		(lang)
	)
	(pure)
	(translation_marker
		(lang)
	)
	(pure)
	(translation_marker
		(lang)
	)
	(pure)
)


==================
translation.txt :: Invalid translation
==================
[ p1ckl3s ] Cucumbers
---
(text
	(translation_marker
		(lang_invalid)
	)
	(pure)
)
